                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-07-2006 fixed: random lockups due to thread issues with settings bool cache (once more ;))
 - 06-07-2006 fixed: HttpApi SendKey should now process "keyboard" codes again
 - 06-07-2006 fixed: HttpApi should process commands slightly quicker
 - 06-07-2006 fixed: Progress dialog in Python wouldn't display the third line of text.
 - 06-07-2006 fixed: bug when canceling input of gamepad lock code.
 - 06-07-2006 changed: removed o: mapping. t: is now mapped to the user data folder. if you run from a dvd it will be set to the savegame folder and the userdata folder will be cached on first run.
 - 06-07-2006 fixed: pressing play dvd and autorun would attempt to start mplayer on some dvd's
 - 06-07-2006 fixed: random lockups due to thread issues with settings bool cache.
 - 06-07-2006 fixed: Some skin settings weren't loaded correctly once a blank setting was encountered.
 - 06-07-2006 changed: combined gui and video calibration, 
              added: new gui setting skin zoom and new skin.xml setting, to allow for overscan adjustment of skin.
              removed: osd location adjustment, now only follows what's been set in skin
 - 05-07-2006 changed: directory labels in file manager now show 'root' instead of being blank in the root listing.
 - 05-07-2006 fixed: !Skin.String(name) conditional wasn't functioning (the ! was ignored)
 - 05-07-2006 fixed: Initial control visibility and dialog control visibility were cached incorrectly.
 - 04-07-2006 changed: Skin reload no longer stops the currently playing media.
 - 04-07-2006 fixed: 'add source button' didn't appear on empty bookmark listing in my programs.